--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,9 @@
 
     <properties>
         <scala.version>2.11.6</scala.version>
+        <junit.version>4.12</junit.version>
+        <assertj.version>3.0.0</assertj.version>
+        <scalatest.version>2.2.4</scalatest.version>
 
         <java.version>1.8</java.version>
         <maven-compiler-plugin-version>2.5.1</maven-compiler-plugin-version>
@@ -39,6 +42,31 @@
                 <groupId>org.scala-lang</groupId>
                 <artifactId>scala-reflect</artifactId>
                 <version>${scala.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.assertj</groupId>
+                <artifactId>assertj-core</artifactId>
+                <version>${assertj.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.scalatest</groupId>
+                <artifactId>scalatest_2.11</artifactId>
+                <version>${scalatest.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.scala-lang.modules</groupId>
+                <artifactId>scala-parser-combinators_2.11</artifactId>
+                <version>1.0.4</version>
+            </dependency>
+            <dependency>
+                <groupId>com.typesafe.akka</groupId>
+                <artifactId>akka-actor_2.11</artifactId>
+                <version>2.3.11</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
