--- a/akka-course/src/test/resources/application.conf
+++ b/akka-course/src/test/resources/application.conf
@@ -5,6 +5,7 @@ akka {
       receive = on
       autoreceive = on
       lifecycle = on
-    }
+    },
+    provider = "akka.cluster.ClusterActorRefProvider"
   }
 }
